<resources>
    <string name="app_name">HeroesVSVillanos</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="ayer">TextView</string>
    <string name="superwiki">SuperWIKI</string>
    <string name="supewiki">SupeWIKI</string>
    <string name="allmigth">Allmigth</string>
    <string name="toshinori_es_un_poderoso_h_roe_reconocido_como_el_s_mbolo_de_la_paz_lo_que_indica_su_extraordinario_e_inmenso_poder_l_es_capaz_de_derrotar_a_un_nomu_creado_espec_ficamente_para_combatirlo_toshinori_a_pesar_de_su_desventaja_ponderada_y_fuerza_agotada_es_f_cilmente_capaz_de_abrumar_a_izuku_y_katsuki_que_est_n_entre_los_m_s_fuertes_de_la_clase_1_a_toshinori_derrot_a_all_for_one_un_villano_extremadamente_poderoso_que_una_vez_gobern_jap_n_haciendo_a_toshinori_el_nico_sucesor_de_one_for_all_en_lograr_esta_haza_a">Toshinori es un poderoso héroe reconocido como el \'Símbolo de la Paz\', lo que indica su extraordinario e inmenso poder. Él es capaz de derrotar a un Nomu creado específicamente para combatirlo. Toshinori, a pesar de su desventaja ponderada y fuerza agotada, es fácilmente capaz de abrumar a Izuku y Katsuki, que están entre los más fuertes de la Clase 1-A. Toshinori derrotó a All For One, un villano extremadamente poderoso que una vez gobernó Japón, haciendo a Toshinori el único sucesor de One For All en lograr esta hazaña.</string>
    <string name="all_migth">All Migth</string>
    <string name="siguiente">Siguiente</string>
    <string name="spiderman">Spiderman</string>
    <string name="el_joven_peter_parker_fue_mordido_por_una_ara_a_radioactiva_en_la_escuela_secundaria_la_mordedura_de_la_ara_a_lo_llev_a_desarrollar_habilidades_similares_a_las_del_ar_cnido_peter_gano_as_la_fuerza_la_velocidad_y_la_habilidad_de_trepar_por_las_paredes_m_s_un_extraordinario_sentido_que_le_avisaba_del_peligro_inminente_a_la_tr_gicamente_muerte_de_su_t_o_ben_peter_iniciar_a_su_lucha_contra_el_mal_como_el_asombroso_hombre_ara_a_historia_peter_benjamin_parker_es_hijo_de_los_agentes_de_la_c_i_a_mary_y_richard_parker_quienes_fueron_asesinados_en_el_extranjero_en_un_accidente_de_avi_n_como_esp_as_del_gobierno_de_ee_uu_cuando_peter_era_tan_solo_un_ni_o_despu_s_de_la_muerte_de_sus_padres_peter_se_ir_a_a_vivir_con_sus_t_os_ben_y_may_en_nueva_york">El joven Peter Parker fue mordido por una araña radioactiva en la escuela secundaria, la mordedura de la araña lo llevó a desarrollar habilidades similares a las del arácnido. Peter gano así la fuerza, la velocidad, y la habilidad de trepar por las paredes más un extraordinario sentido que le avisaba del peligro inminente. A la trágicamente muerte de su tío Ben, Peter iniciaría su lucha contra el mal como el Asombroso Hombre Araña. ==Historia== Peter Benjamin Parker es hijo de los agentes de la C.I.A. Mary y Richard Parker, quienes fueron asesinados en el extranjero en un accidente de avión como espías del gobierno de EE.UU cuando Peter era tan solo un niño. Después de la muerte de sus padres, Peter se iría a vivir con sus tíos Ben y May en Nueva York.</string>
    <string name="aja">TODO</string>
</resources>