<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131212"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SuperWIKI"
        android:textColor="#ACA3A3"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ImageView

        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="218dp"
        android:contentDescription="@string/allmigth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/all"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="375dp"
        android:layout_height="260dp"
        android:text="@string/toshinori_es_un_poderoso_h_roe_reconocido_como_el_s_mbolo_de_la_paz_lo_que_indica_su_extraordinario_e_inmenso_poder_l_es_capaz_de_derrotar_a_un_nomu_creado_espec_ficamente_para_combatirlo_toshinori_a_pesar_de_su_desventaja_ponderada_y_fuerza_agotada_es_f_cilmente_capaz_de_abrumar_a_izuku_y_katsuki_que_est_n_entre_los_m_s_fuertes_de_la_clase_1_a_toshinori_derrot_a_all_for_one_un_villano_extremadamente_poderoso_que_una_vez_gobern_jap_n_haciendo_a_toshinori_el_nico_sucesor_de_one_for_all_en_lograr_esta_haza_a"
        android:textColor="#ACA3A3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_migth"
        android:textColor="#ACA3A3"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:onClick="siguienteheroe"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>